--- a/templates/detail.html
+++ b/templates/detail.html
@@ -83,7 +83,7 @@
     <!-- ======================== -->
     <div class="book-detail-card">
         <div class="book-detail-image">
-            <img src="/static/img/cover.avif" alt="Cover {{ book.Judul }}" />
+            <img src="{{ book.Gambar }}" alt="Cover {{ book.Judul }}" />
         </div>
 
         <div class="book-detail-info">
