--- a/templates/index.html
+++ b/templates/index.html
@@ -70,7 +70,7 @@
 
         <div class="container page-layout">
             
-            <aside class="filter-sidebar">
+<aside class="filter-sidebar">
                 <form action="/" method="GET" class="filter-form-v3">
                     <input type="hidden" name="query" value="{{ search_query or '' }}">
                     <input type="hidden" name="sort_price" value="{{ selected_sort_price or '' }}">
@@ -87,38 +87,57 @@
                             </a>
 
                             {% for category, sub_map in nested_category_map.items() %}
-                            <details class="filter-item-nested" 
-                                     {% if current_selected_cat == category %}open{% endif %}>
+                            
+                                <details class="filter-item-nested" 
+                                    {% if current_filter == 'cat_' + category %}
+                                        open
+                                    {% elif current_filter and current_filter.startswith('sub_') and current_filter.replace('sub_', '') in sub_map %}
+                                        open
+                                    {% elif current_filter and current_filter.startswith('subsub_') %}
+                                        {# Cek manual apakah subsub yang aktif ada di dalam salah satu anak kategori ini #}
+                                        {% set target = current_filter.replace('subsub_', '') %}
+                                        {% for sub_list in sub_map.values() %}
+                                            {% if target in sub_list %}open{% endif %}
+                                        {% endfor %}
+                                    {% endif %}>
                                 
-                                <summary>
-                                    <a href="/?filter=cat_{{ category }}&query={{ search_query or '' }}&lang={{ current_lang or 'all' }}&sort_price={{ selected_sort_price or '' }}"
-                                       class="filter-item-label {% if current_filter == 'cat_' + category %}active{% endif %}">
-                                        <span>{{ category }}</span>
-                                    </a>
-                                </summary>
-                                <div class="filter-options-nested">
-                                    
-                                    {% for sub_category, sub_sub_list in sub_map.items() %}
-                                    <details class="filter-item-nested"
-                                             {% if current_selected_sub == sub_category %}open{% endif %}>
-                                        <summary>
-                                            <a href="/?filter=sub_{{ sub_category }}&query={{ search_query or '' }}&lang={{ current_lang or 'all' }}&sort_price={{ selected_sort_price or '' }}"
-                                               class="filter-item-label {% if current_filter == 'sub_' + sub_category %}active{% endif %}">
-                                                <span>{{ sub_category }}</span>
-                                            </a>
-                                        </summary>
-                                        <div class="filter-options-nested-sub">
-                                            {% for sub_sub in sub_sub_list %}
-                                            <a href="/?filter=subsub_{{ sub_sub }}&query={{ search_query or '' }}&lang={{ current_lang or 'all' }}&sort_price={{ selected_sort_price or '' }}"
-                                               class="filter-item-label {% if current_filter == 'subsub_' + sub_sub %}active{% endif %}">
-                                                <span>{{ sub_sub }}</span>
-                                            </a>
-                                            {% endfor %}
-                                        </div>
-                                    </details>
-                                    {% endfor %}
-                                </div>
-                            </details>
+                                    <summary>
+                                        <a href="/?filter=cat_{{ category }}&query={{ search_query or '' }}&lang={{ current_lang or 'all' }}&sort_price={{ selected_sort_price or '' }}"
+                                           class="filter-item-label {% if current_filter == 'cat_' + category %}active{% endif %}">
+                                            <span>{{ category }}</span>
+                                        </a>
+                                    </summary>
+
+                                    <div class="filter-options-nested">
+                                        
+                                        {% for sub_category, sub_sub_list in sub_map.items() %}
+                                        
+                                            <details class="filter-item-nested"
+                                                {% if current_filter == 'sub_' + sub_category %}
+                                                    open
+                                                {% elif current_filter and current_filter.startswith('subsub_') and current_filter.replace('subsub_', '') in sub_sub_list %}
+                                                    open
+                                                {% endif %}>
+                                                
+                                                <summary>
+                                                    <a href="/?filter=sub_{{ sub_category }}&query={{ search_query or '' }}&lang={{ current_lang or 'all' }}&sort_price={{ selected_sort_price or '' }}"
+                                                       class="filter-item-label {% if current_filter == 'sub_' + sub_category %}active{% endif %}">
+                                                        <span>{{ sub_category }}</span>
+                                                    </a>
+                                                </summary>
+                                                
+                                                <div class="filter-options-nested-sub">
+                                                    {% for sub_sub in sub_sub_list %}
+                                                    <a href="/?filter=subsub_{{ sub_sub }}&query={{ search_query or '' }}&lang={{ current_lang or 'all' }}&sort_price={{ selected_sort_price or '' }}"
+                                                       class="filter-item-label {% if current_filter == 'subsub_' + sub_sub %}active{% endif %}">
+                                                        <span>{{ sub_sub }}</span>
+                                                    </a>
+                                                    {% endfor %}
+                                                </div>
+                                            </details>
+                                        {% endfor %}
+                                    </div>
+                                </details>
                             {% endfor %}
                         </div>
                     </details>
